public interface Observer {
  public void update(SingletonClock clock);
}
